Refactorización. Mejora de organización del proyecto, rutas mejoradas, eliminación de el segundo router-outlet (innecesario), creación del componente error para rutas que no coincidan con ninguna de las establecidas.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,2 @@
+<app-header></app-header>
 <router-outlet></router-outlet>
-<!-- <app-login></app-login> -->
-<!-- <app-empleados-list></app-empleados-list> -->
-<!-- <app-principal-empleados></app-principal-empleados> -->
-<!-- <app-principal-auditeles></app-principal-auditeles> -->
-<!-- <app-header></app-header> -->
-<!-- <app-principal></app-principal> -->
