--- a/src/app/shared/components/header/header.html
+++ b/src/app/shared/components/header/header.html
@@ -2,8 +2,8 @@
     <div class="container-datos">
         <h1>Evasys</h1>
         <div class="container-enlaces">
-            <a routerLink="empleados" role="button">Empleados</a>
-            <a routerLink="auditeles" role="button">Auditeles</a>
+            <a routerLink="empleados/listadoEmpleados" role="button">Empleados</a>
+            <a routerLink="empleados/listadoAuditeles" role="button">Auditeles</a>
             <a routerLink="/login">Cerrar sesión</a>
         </div>
     </div>
