Agregados varios cambios a lo largo de este fin de semana. Agregados servicios para cada una de las peticiones. Creados componentes necesarios para editar y crear empleados. Creados servicios para mostrar errores en la aplicacion y mensajes de exito.

--- a/src/app/pages/content/principal-auditeles/principal-auditeles.html
+++ b/src/app/pages/content/principal-auditeles/principal-auditeles.html
@@ -1,6 +1,6 @@
 <section class="general-container-auditeles">
     <section class="bienvenida-container">
-        <app-barra-busqueda></app-barra-busqueda>
+        <app-barra-busqueda [arrayBotones]="['Añadir auditel', 'Generar informe', 'Buscar']"></app-barra-busqueda>
     </section>
     <section class="auditeles-list-container">
         <app-auditeles-list></app-auditeles-list>
