--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,2 +1,4 @@
 <app-header></app-header>
 <router-outlet></router-outlet>
+<app-card-message-error></app-card-message-error>
+<app-card-accepted></app-card-accepted>
