--- a/src/app/pages/content/principal-empleados/principal-empleados.html
+++ b/src/app/pages/content/principal-empleados/principal-empleados.html
@@ -1,8 +1,10 @@
 <section class="general-container-empleados">
     <section class="bienvenida-container">
-        <app-barra-busqueda></app-barra-busqueda>
+        <app-barra-busqueda [arrayBotones]="['Añadir empleado', 'Buscar']"></app-barra-busqueda>
     </section>
     <section class="empleados-list-container">
-        <app-empleados-list></app-empleados-list>
+        @for (empleado of empleados; track $index) {
+            <app-empleados-list [empleado]= empleado (borrarEmpleado)="eliminarEmpleado($event)"></app-empleados-list>
+        }
     </section>
 </section>
