--- a/src/app/shared/components/barra-busqueda/barra-busqueda.html
+++ b/src/app/shared/components/barra-busqueda/barra-busqueda.html
@@ -1,7 +1,19 @@
 <div class="barra-busqueda-container">
   <h1>Titulo de la barra de búsqueda</h1>
   <div class="busqueda">
-    <input type="text" class="form-control" placeholder="" />
-    <button class="btn btn-light">Buscar</button>
+    <input type="text" class="form-control" placeholder=""/>
+    @for (nombreBoton of arrayBotones; track $index) {
+        @if (nombreBoton.includes('empleado')) {
+            <button class="btn btn-light" routerLink="/empleados/agregarEmpleado">{{nombreBoton}}</button>
+        }
+        @else if (nombreBoton.includes('auditel')) {
+            <button class="btn btn-light" routerLink="/empleados/agregarAuditel">{{nombreBoton}}</button>
+        }
+        @else if (nombreBoton.toLocaleLowerCase().includes('generar')) {
+            <button class="btn btn-light" routerLink="/empleados/generarInforme">{{nombreBoton}}</button>
+        }@else {
+            <button class="btn btn-light" routerLink="/buscar">{{nombreBoton}}</button>
+        }
+    }
   </div>
 </div>
