Agregamos la ruta de nuestras auditeles, agregamos la inyección de servicios en la clase de auditel y agregamos el componente reactivo para el muestreo de las auditeles.

--- a/src/app/pages/content/principal-auditeles/principal-auditeles.html
+++ b/src/app/pages/content/principal-auditeles/principal-auditeles.html
@@ -3,6 +3,8 @@
         <app-barra-busqueda [arrayBotones]="['Añadir auditel', 'Generar informe', 'Buscar']"></app-barra-busqueda>
     </section>
     <section class="auditeles-list-container">
-        <app-auditeles-list></app-auditeles-list>
+        @for (auditoria of auditorias; track $index) {
+            <app-auditeles-list (auditoriaObject) = "auditoria"></app-auditeles-list>
+        }
     </section>
 </section>
