--- a/src/app/shared/components/auditeles-list/auditeles-list.html
+++ b/src/app/shared/components/auditeles-list/auditeles-list.html
@@ -1,6 +1,6 @@
 <div class="auditeles-container">
     <div class="datos-auditel">
-        <h3>Nombre de auditel</h3>
+        <h3>{{auditoria.nombre}}</h3>
     </div>
     <div class="botones-container">
         <button class="btn btn-outline">Editar</button>
