Agregados: Nuevos endpoints, peticiones, comprobaciones de roles de seguridad, behaviourSubject para obtener el estado del logueo, interceptores para refrescar token, comprobaciones para distintas peticiones de coordinadores y sus empleados.

--- a/src/app/pages/content/login/login.css
+++ b/src/app/pages/content/login/login.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 80vh;
     width: 100vw;
 }
 
@@ -23,6 +23,7 @@
     padding: 1rem;
     background-color: #D9DCD6;
     border-radius: 1rem;
+    box-shadow: 2px 2px 10px;
 }
 
 .form-iniciar-sesion form{
