--- a/src/app/shared/components/empleados-list/empleados-list.css
+++ b/src/app/shared/components/empleados-list/empleados-list.css
@@ -1,13 +1,23 @@
 .empleados-container{
-    display: flex;
-    justify-content: space-between;
+    display: grid;
     align-items: center;
     border-radius: 0.5rem;
-    background-color: #D9DCD6;
+    background-color: #ffffff;
     padding: 0.5rem;
+    width: 30vw;
+    box-shadow: 1px 1px 10px;
+}
+
+.datos-empleado{
+    padding: 1rem;
+    gap: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .botones-container{
     display: flex;
+    justify-content: center;
     gap: 1rem;
 }
