--- a/src/app/pages/content/principal-empleados/principal-empleados.css
+++ b/src/app/pages/content/principal-empleados/principal-empleados.css
@@ -7,7 +7,9 @@
 
 .empleados-list-container{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
     margin-top: 2rem;
     gap: 2rem;
 }
