--- a/src/app/shared/components/barra-busqueda/barra-busqueda.css
+++ b/src/app/shared/components/barra-busqueda/barra-busqueda.css
@@ -14,6 +14,7 @@
 
 .busqueda input{
     width: 90vw;
+    box-shadow: 1px 1px 10px;
 }
 
 .busqueda button{
@@ -22,4 +23,5 @@
     align-items: center;
     width: 8vw;
     font-size: 14px;
+    box-shadow: 1px 1px 10px;
 }
