--- a/src/app/shared/components/barra-busqueda/barra-busqueda.html
+++ b/src/app/shared/components/barra-busqueda/barra-busqueda.html
@@ -1,7 +1,7 @@
 <div class="barra-busqueda-container">
-  <h1>Titulo de la barra de búsqueda</h1>
+  <h1>{{valorBusqueda}}</h1>
   <div class="busqueda">
-    <input type="text" class="form-control" placeholder=""/>
+    <input type="text" class="form-control" [formControl]="controlBusqueda" placeholder=""/>
     @for (nombreBoton of arrayBotones; track $index) {
         @if (nombreBoton.includes('empleado')) {
             <button class="btn btn-light" routerLink="/empleados/agregarEmpleado">{{nombreBoton}}</button>
@@ -11,8 +11,6 @@
         }
         @else if (nombreBoton.toLocaleLowerCase().includes('generar')) {
             <button class="btn btn-light" routerLink="/empleados/generarInforme">{{nombreBoton}}</button>
-        }@else {
-            <button class="btn btn-light" routerLink="/buscar">{{nombreBoton}}</button>
         }
     }
   </div>
