--- a/src/app/shared/components/empleados-list/empleados-list.html
+++ b/src/app/shared/components/empleados-list/empleados-list.html
@@ -1,9 +1,10 @@
 <div class="empleados-container">
     <div class="datos-empleado">
-        <h3>{{empleado.nombre}}</h3>
+        <h3>{{empleado.nombre}} {{empleado.apellidos}}</h3>
+        <h3>{{empleado.email}}</h3>
     </div>
     <div class="botones-container">
-        <button class="btn btn-outline" [routerLink]="['/empleados/editarEmpleado', empleado.id_empleado! ]">Editar</button>
+        <button class="btn btn-outline-dark" [routerLink]="['/empleados/editarEmpleado', empleado.id_empleado! ]">Editar</button>
         <button class="btn btn-outline-danger" (click)="eliminarEmpleado(empleado.id_empleado!)">Dar de baja</button>
     </div>
 </div>
