--- a/src/app/pages/content/principal-departamentos/principal-departamentos.css
+++ b/src/app/pages/content/principal-departamentos/principal-departamentos.css
@@ -12,3 +12,11 @@
     margin-top: 2rem;
     gap: 2rem;
 }
+
+.carga{
+    display: flex;
+    height: 80vh;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+}
