--- a/src/app/shared/components/auditeles-list/auditeles-list.html
+++ b/src/app/shared/components/auditeles-list/auditeles-list.html
@@ -3,7 +3,7 @@
         <h3>{{auditoriaObject.expediente}}</h3>
     </div>
     <div class="botones-container">
-        <button class="btn btn-outline" [routerLink]="['/empleados/editarAuditel', auditoriaObject.id_audicion]">Editar</button>
-        <button class="btn btn-outline-danger">Eliminar</button>
+        <button class="btn btn-outline" [routerLink]="['/empleados/editarAuditel', auditoriaObject.id_audicion]"><i class="fa-solid fa-pen-to-square"></i></button>
+        <button class="btn btn-outline-danger"><i class="fa-regular fa-trash-can"></i></button>
     </div>
 </div>
