--- a/src/app/shared/components/empleados-list/empleados-list.html
+++ b/src/app/shared/components/empleados-list/empleados-list.html
@@ -4,7 +4,7 @@
         <h3>{{empleado.email}}</h3>
     </div>
     <div class="botones-container">
-        <button class="btn btn-outline-dark" [routerLink]="['/empleados/editarEmpleado', empleado.id_empleado! ]">Editar</button>
-        <button class="btn btn-outline-danger" (click)="eliminarEmpleado(empleado.id_empleado!)">Dar de baja</button>
+        <button class="btn btn-outline-dark" [routerLink]="['/empleados/editarEmpleado', empleado.id_empleado! ]"><i class="fa-solid fa-pen-to-square"></i></button>
+        <button class="btn btn-outline-danger" (click)="eliminarEmpleado(empleado.id_empleado!)"><i class="fa-solid fa-user-xmark"></i></button>
     </div>
 </div>
