--- a/src/app/pages/content/principal-auditeles/principal-auditeles.css
+++ b/src/app/pages/content/principal-auditeles/principal-auditeles.css
@@ -1,13 +1,21 @@
-.general-container-auditeles{
-    display: flex;
-    flex-direction: column;
-    padding: 0.5rem;
-    margin: 0.5rem;
+.general-container-auditeles {
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem;
+  margin: 0.5rem;
 }
 
-.auditeles-list-container{
-    display: flex;
-    flex-direction: column;
-    margin-top: 2rem;
-    gap: 2rem;
+.auditeles-list-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 2rem;
+  gap: 2rem;
+}
+
+.carga {
+  display: flex;
+  height: 80vh;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
 }
