--- a/src/app/pages/content/principal-coordinador/principal-coordinador.css
+++ b/src/app/pages/content/principal-coordinador/principal-coordinador.css
@@ -1,14 +1,22 @@
-.general-container-coordinador{
-    display: flex;
-    flex-direction: column;
-    padding: 0.5rem;
-    margin: 0.5rem;
+.general-container-coordinador {
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem;
+  margin: 0.5rem;
 }
 
-.coordinadores-list-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin-top: 2rem;
-    gap: 2rem;
+.coordinadores-list-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 2rem;
+  gap: 2rem;
+}
+
+.carga {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  width: 100vw;
 }
