--- a/src/app/shared/components/departamentos-list/departamentos-list.html
+++ b/src/app/shared/components/departamentos-list/departamentos-list.html
@@ -3,7 +3,7 @@
         <h3>{{departamento.nombre}}</h3>
     </div>
     <div class="botones-container">
-        <button class="btn btn-outline-dark" [routerLink]="['/empleados/editarDepartamento', departamento.id_departamento! ]">Editar</button>
-        <button class="btn btn-outline-danger">Dar de baja</button>
+        <button class="btn btn-outline-dark" [routerLink]="['/empleados/editarDepartamento', departamento.id_departamento! ]"><i class="fa-solid fa-pen-to-square"></i></button>
+        <button class="btn btn-outline-danger"><i class="fa-regular fa-trash-can"></i></button>
     </div>
 </div>
