--- a/src/app/shared/components/barra-busqueda/barra-busqueda.html
+++ b/src/app/shared/components/barra-busqueda/barra-busqueda.html
@@ -1,5 +1,5 @@
 <div class="barra-busqueda-container">
-  <h1>{{valorBusqueda}}</h1>
+  <h1>Búsqueda: {{valorBusqueda}}</h1>
   <div class="busqueda">
     <input type="text" class="form-control" [formControl]="controlBusqueda" placeholder=""/>
     @for (nombreBoton of arrayBotones; track $index) {
