--- a/src/app/shared/components/coordinadores-list/coordinadores-list.html
+++ b/src/app/shared/components/coordinadores-list/coordinadores-list.html
@@ -1,6 +1,6 @@
 <div class="coordinadores-container">
     <div class="datos-coordinador">
-        <h3>@{{coordinador.usuario}}</h3>
+        <h3 class="nombre-usuario">@{{coordinador.usuario}}</h3>
         <h3>{{coordinador.nombre}} {{coordinador.apellidos}}</h3>
     </div>
     <div class="botones-container">
