--- a/src/app/pages/content/login/login.css
+++ b/src/app/pages/content/login/login.css
@@ -1,6 +1,5 @@
 .general-container-login{
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 80vh;
@@ -10,7 +9,7 @@
 .title-section{
     margin-bottom: 2rem;
     text-align: start;
-    color: #D9DCD6;
+    color: #000000;
 }
 
 .title-section h1{
@@ -19,9 +18,9 @@
 }
 
 .form-iniciar-sesion{
-    width: 40rem;
+    width: 50rem;
     padding: 1rem;
-    background-color: #D9DCD6;
+    background-color: #d9dcd663;
     border-radius: 1rem;
     box-shadow: 2px 2px 10px;
 }
