--- a/src/app/pages/content/principal-auditeles/principal-auditeles.css
+++ b/src/app/pages/content/principal-auditeles/principal-auditeles.css
@@ -3,19 +3,23 @@
   flex-direction: column;
   padding: 0.5rem;
   margin: 0.5rem;
+  width: 100%;
+  height: 100vh;
 }
 
 .auditeles-list-container {
   display: flex;
-  flex-direction: column;
-  margin-top: 2rem;
+  flex-wrap: wrap;
+  padding: 1rem;
   gap: 2rem;
+  justify-content: space-between;
+  overflow-y: auto;
 }
 
 .carga {
   display: flex;
-  height: 80vh;
-  width: 100vw;
   justify-content: center;
   align-items: center;
+  height: 80vh;
+  width: 80vw;
 }
