--- a/src/app/pages/content/principal-centros/principal-centros.css
+++ b/src/app/pages/content/principal-centros/principal-centros.css
@@ -3,20 +3,23 @@
   flex-direction: column;
   padding: 0.5rem;
   margin: 0.5rem;
+  width: 100%;
+  height: 100vh;
 }
 
 .centros-list-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  margin-top: 2rem;
+  padding: 1rem;
   gap: 2rem;
+  justify-content: space-between;
+  overflow-y: auto;
 }
 
 .carga {
   display: flex;
   height: 80vh;
-  width: 100vw;
+  width: 80vw;
   justify-content: center;
   align-items: center;
 }
