--- a/src/app/pages/content/principal-coordinador/principal-coordinador.css
+++ b/src/app/pages/content/principal-coordinador/principal-coordinador.css
@@ -3,14 +3,17 @@
   flex-direction: column;
   padding: 0.5rem;
   margin: 0.5rem;
+  width: 100%;
+  height: 100vh;
 }
 
 .coordinadores-list-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  margin-top: 2rem;
+  padding: 1rem;
   gap: 2rem;
+  justify-content: space-between;
+  overflow-y: auto;
 }
 
 .carga {
@@ -18,5 +21,5 @@
   justify-content: center;
   align-items: center;
   height: 80vh;
-  width: 100vw;
+  width: 80vw;
 }
