--- a/src/app/pages/content/principal-departamentos/principal-departamentos.css
+++ b/src/app/pages/content/principal-departamentos/principal-departamentos.css
@@ -1,22 +1,25 @@
-.general-container-departamento{
-    display: flex;
-    flex-direction: column;
-    padding: 0.5rem;
-    margin: 0.5rem;
+.general-container-departamento {
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem;
+  margin: 0.5rem;
+  width: 100%;
+  height: 100vh;
 }
 
-.departamentos-list-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin-top: 2rem;
-    gap: 2rem;
+.departamentos-list-container {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 1rem;
+  gap: 2rem;
+  justify-content: space-between;
+  overflow-y: auto;
 }
 
-.carga{
-    display: flex;
-    height: 80vh;
-    width: 100vw;
-    justify-content: center;
-    align-items: center;
+.carga {
+  display: flex;
+  height: 80vh;
+  width: 80vw;
+  justify-content: center;
+  align-items: center;
 }
