--- a/src/app/pages/content/principal-empleados/principal-empleados.css
+++ b/src/app/pages/content/principal-empleados/principal-empleados.css
@@ -1,23 +1,25 @@
-.general-container-empleados{
-    display: flex;
-    flex-direction: column;
-    padding: 0.5rem;
-    margin: 0.5rem;
+.general-container-empleados {
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem;
+  margin: 0.5rem;
+  width: 100%;
+  height: 100vh;
 }
 
-.empleados-list-container{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin-top: 2rem;
-    gap: 2rem;
+.empleados-list-container {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 1rem;
+  gap: 2rem;
+  justify-content: space-between;
+  overflow-y: auto;
 }
 
-.carga{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80vh;
-    width: 100vw;
+.carga {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  width: 80vw;
 }
