--- a/src/app/shared/components/auditeles-list/auditeles-list.css
+++ b/src/app/shared/components/auditeles-list/auditeles-list.css
@@ -1,17 +1,18 @@
-.auditeles-container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-radius: 0.5rem;
-    background-color: #D9DCD6;
-    padding: 0.5rem;
+.auditeles-container {
+  display: grid;
+  align-items: center;
+  border-radius: 0.5rem;
+  background-color: #ffffff;
+  padding: 0.5rem;
+  width: 26vw;
+  box-shadow: 1px 1px 10px;
 }
 
-.botones-container{
-    display: flex;
-    gap: 1rem;
+.botones-container {
+  display: flex;
+  gap: 1rem;
 }
 
-button{
-    border-radius: 2rem;
+button {
+  border-radius: 2rem;
 }
