--- a/src/app/shared/components/barra-busqueda/barra-busqueda.css
+++ b/src/app/shared/components/barra-busqueda/barra-busqueda.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    color: #D9DCD6;
+    padding: 1rem;
+    color: #010300;
 }
 
 .busqueda{
@@ -13,7 +14,7 @@
 }
 
 .busqueda input{
-    width: 90vw;
+    width: 100%;
     box-shadow: 1px 1px 10px;
 }
 
