--- a/src/app/shared/components/coordinadores-list/coordinadores-list.css
+++ b/src/app/shared/components/coordinadores-list/coordinadores-list.css
@@ -1,27 +1,31 @@
-.coordinadores-container{
-    display: grid;
-    align-items: center;
-    border-radius: 0.5rem;
-    background-color: #ffffff;
-    padding: 0.5rem;
-    width: 30vw;
-    box-shadow:  1px 1px 10px;
+.coordinadores-container {
+  display: grid;
+  align-items: center;
+  border-radius: 0.5rem;
+  background-color: #ffffff;
+  padding: 0.5rem;
+  width: 26vw;
+  box-shadow: 1px 1px 10px;
 }
 
-.datos-coordinador{
-    padding: 1rem;
-    gap: 1rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.datos-coordinador {
+  padding: 1rem;
+  gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.botones-container{
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
+.datos-coordinador .nombre-usuario {
+  font-weight: bold;
 }
 
-button{
-    border-radius: 2rem;
+.botones-container {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+button {
+  border-radius: 2rem;
 }
